--- a/components/homework_component.html
+++ b/components/homework_component.html
@@ -206,10 +206,11 @@ var app = new Vue({
   methods: {
     getData() {
       const vm = this;
+      const corsUrl = 'https://cors-anywhere.herokuapp.com/';
       const api = 'http://opendata2.epa.gov.tw/AQI.json';
 
       // 使用 jQuery ajax
-      $.get(api).then(function( response ) {
+      $.get(corsUrl + api).then(function (response) {
         vm.data = response;
         vm.filterdata = vm.data;
         // console.log(response)
